--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body {
 .menu {
   display: inline-block;
 }
-.menu-list {
+.menu__list {
   list-style-type: none;
   display: flex;
   justify-content: space-between;
