--- a/css/styles.css
+++ b/css/styles.css
@@ -53,9 +53,9 @@ body {
   padding-bottom: 94px;
 }
 
-.menu-nav {
+
   
-}
+
 .menu-nav__list {
   display: inline-block;
   list-style-type: none;
@@ -230,28 +230,48 @@ body {
   color:#2196f3
 }
 
-.btn-group {
+.button-group {
+  height: 54px;
   display: flex;
   justify-content: center;
-  margin-left: auto;
+  align-items: center;
   margin-bottom: 50px;
 }
 
-.btn-group .button {
+.button-group__item {
   border: none;
-  width: 93px;
+  width: 120px;
   height: 38px;
   border-radius: 4px;
   background-color: #f5f4fa;
   cursor: pointer;
   margin-left: 8px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 
   transition-property: background-color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
-.btn-group .button:hover,
-.btn-group .button:focus {
+
+.button-group__text {
+  font-family: "Roboto";
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63em;
+  letter-spacing: 0.03em;
+
+  transition-property: background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
+}
+
+.button-group__item:hover,
+.button-group__item:focus {
+  
   background-color: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
