--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,6 @@
-@import "./components/_nav.scss"
+@import ".utils/visually-hidden";
+@import "./base/common";
+@import "./base/container";
+@import "./base/section";
+@import "./components/_nav.scss";
+
