--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@im @import "./base/common";
 .menu {
   display: inline-block;
 }
@@ -12,4 +13,5 @@
   padding: 0px;
   margin-left: 93px;
   margin-right: 345px;
-}/*# sourceMappingURL=main.css.map */
+}
+/*# sourceMappingURL=main.css.map */
