--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,10 @@
-@import ".utils/visually-hidden";
+@import "./utils/visually-hidden";
 @import "./base/common";
 @import "./base/container";
 @import "./base/section";
 @import "./components/_nav.scss";
+@import "./base/page-header";
+@import "./components/logo";
+
+@import "./components/button";
 
