--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -3,9 +3,20 @@
     padding-bottom: 94px;
   }
   
-  .section-our-team {
+.section-our-team {
     background-color: #f5f4fa;
     padding-top: 94px;
     padding-bottom: 94px;
   }
+
+.section-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 50px;
   
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+  }
