--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,3 +18,4 @@
 @import "./components/article";
 @import "./components/modal";
 @import "./components/card-list";
+@import "./components/backdrop";
